Wed Jul 09 01:27:39 BST 2003  Olly Betts <olly@survex.com>

	* bindings/swig/om_util_php4.i: om_termname -> std::string.

Wed Jul 09 01:25:11 BST 2003  Olly Betts <olly@survex.com>

	* docs/overview.html,include/xapian/base.h,include/xapian/database.h:
	  Improvements to doxygen-generated documentation.

Wed Jul 09 01:23:55 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,docs/todo.xml: Added check for SWIG version (require
	  at least 1.3.14).

Tue Jul  8 20:59:08 2003  James Aylett  <james@tartarus.org>

	* common/utils.h: missing #include <ctype.h>

Tue Jul  8 18:06:23 2003  James Aylett  <james@tartarus.org>

	* bindings/swig/xapian.i: over-enthusiastic automatic
	  conversion of termname to std::string

Tue Jul 08 17:45:16 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h: Improved mingw implementation of rmdir().

Tue Jul 08 17:43:21 BST 2003  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.in: Version 0.7.1.

Sun Jul 06 21:35:08 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Minor tweak.

Sun Jul 06 21:34:30 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h: Compile fixes for mingw.

Sun Jul 06 17:59:26 BST 2003  Olly Betts <olly@survex.com>

	* docs/scalability.html: Fixed typo.

Sun Jul 06 13:02:09 BST 2003  Olly Betts <olly@survex.com>

	* docs/scalability.html: Fixed typo.

Sun Jul 06 12:56:08 BST 2003  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.html,docs/scalability.html: Added new
	  document on Xapian's scalability.

Sun Jul 06 12:15:34 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Made quartz block count unsigned, which should
	  nearly double the size of database for a given block size.

Sun Jul 06 11:47:46 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Use BLK_UNUSED rather than literal -1.

Sun Jul 06 11:47:14 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h: Fixed last check-in to compile.
