@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
 SUBDIRS = @BINDINGS@
-DIST_SUBDIRS = python
-# guile tcl8 php4
+DIST_SUBDIRS = python php4
+# guile tcl8
